Updated Share UI

--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -244,7 +244,7 @@
 					<header>
 						<h1 class="newfont">Introducing SensorAct Project</h1>
 						<hr>
-						<video controls="controls"  poster="http://sandbox.thewikies.com/vfe-generator/images/big-buck-bunny_poster.jpg" width="420" height="315">
+						<!--<video controls="controls"  poster="big-buck-bunny_poster.jpg" width="420" height="315">
 							<source src="@{'public/videos/big_buck_bunny.mp4'}" type="video/mp4" />
 							<source src="@{'public/videos/big_buck_bunny.webm'}" type="video/webm" />
 							<source src="@{'public/videos/big_buck_bunny.ogv'}" type="video/ogg" />
@@ -257,7 +257,7 @@
 						</video>
 						<p>
 							<strong>Download video:</strong><a href="@{'public/videos/big_buck_bunny.mp4'}">MP4 format</a> | <a href="@{'public/videos/big_buck_bunny.ogv'}">Ogg format</a> | <a href="@{'public/videos/big_buck_bunny.webm'}">WebM format</a>
-						</p>
+						</p>-->
 						<!--  video controls="controls"
 						class="video-stream"
 						x-webkit-airplay="allow"
